# TCP_Messenger

./: CMakeLists.txt  README  README.md  TODO
client/: CMakeLists.txt  chat.cpp  chat.hpp  chatwrapper.cpp  chatwrapper.hpp  client.cpp  client.h  client.hpp  definitions.hpp  main.cpp  message.cpp  message.hpp
client/include/: chat.hpp  chatcontainer.hpp  chatwrapper.hpp  client.hpp  definitions.hpp  message.hpp
client/src/: chat.cpp  chatcontainer.cpp  chatwrapper.cpp  client.cpp  main.cpp  message.cpp  protocol.cpp
server/: CMakeLists.txt  main.cpp  server.cpp  server.h
server/include/: server.hpp
server/src/: main.cpp  server.cpp
utils/: CMakeLists.txt
utils/include/: bits.hpp  definitions.hpp  protocol.hpp
utils/src/: bits.cpp  protocol.cpp
